Fix overflow in Items in the listview

--- a/src/pages/main/rss/reditItem/ReditItem.module.css
+++ b/src/pages/main/rss/reditItem/ReditItem.module.css
@@ -11,18 +11,18 @@ li {
   border-bottom: 1px rgba(50,50,50,1);
   background-color: rgb(200,200,200);
   border-radius: 4px;
+  overflow-x: hidden;
 }
 
 .img {
-  flex: 1;
   height: 100px;
   width: 100px;
   border-radius: 4px;
 }
 
 .imgPlaceholder {
+  /* flex: 1; */
   width: 100px;
-  flex: 1;
   height: 100px;
   border-radius: 4px;
   background-color: rgb(50,50,50);
